--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 
         <div class="lowerWave">
-            <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
+            <svg width="100%" height="10%" id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg"
                 class="transition duration-300 ease-in-out delay-150">
                 <path
                     d="M 0,400 C 0,400 0,200 0,200 C 146.93333333333334,188.8 293.8666666666667,177.6 466,193 C 638.1333333333333,208.4 835.4666666666667,250.39999999999998 1002,256 C 1168.5333333333333,261.6 1304.2666666666667,230.8 1440,200 C 1440,200 1440,400 1440,400 Z"
@@ -407,12 +407,12 @@
                 </path>
             </svg>
         </div>
-        <footer class="text-light text-center" id="contact">
+        <footer class="text-light text-center" id="contact_hu">
             <div class="container social-icons">
-                <ul class="d-flex flex-row justify-content-center align-items-stretch p-3">
-                    <li class="icon p-1"><a href="https://www.linkedin.com/in/chris-tian-324a94271/" rel="noreferrer"
+                <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
+                    <li class="icon p-3"><a href="#" rel="noreferrer"
                             target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                    <li class="icon p-1"><a href="https://github.com/Chirs9110" rel="noreferrer" target="_blank"><i
+                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
                                 class="fab fa-github"></i></a></li>
                 </ul>
 
@@ -422,40 +422,6 @@
     </div>
 
     <!-- HUN section -->
-
-    <!-- Header -->
-
-    <!-- <div class="content-bg">
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top autohide">
-                <div class="container">
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked"
-                            onclick="switchInputBack()">
-                        <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox
-                            input</label>
-                    </div>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon my-custom-icon"></span> <i class="fas fa-times"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link projects" href="#projects_hu">Projektek</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link resume" href="Projects/MYownResume/resume.html"
-                                    target="_blank">Önéletrajz</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link contact" href="#contact_hu">Kapcsolat</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div> -->
     <div class="hungarianText" style="display: none;">
         <main class="container first_section">
             <div class="content-wrapper text-center">
@@ -798,9 +764,9 @@
         <footer class="text-light text-center" id="contact_hu">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
-                    <li class="icon p-3"><a href="https://www.linkedin.com/in/chris-tian-324a94271/" rel="noreferrer"
+                    <li class="icon p-3"><a href="#" rel="noreferrer"
                             target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                    <li class="icon p-3"><a href="https://github.com/Chirs9110" rel="noreferrer" target="_blank"><i
+                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
                                 class="fab fa-github"></i></a></li>
                 </ul>
 
