--- a/Projects/admin/index.html
+++ b/Projects/admin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="UTF-8">
@@ -9,85 +9,84 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/xxjapp/xdialog@3/xdialog.min.css" />
-
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
+
     <div class="container" id="foCim">
         <h1 class="text-center text-dark">Admin felület</h1>
-
         <div class="toggle" onclick="toggle()" id="darkLightMode">
             <div class="circle"></div>
         </div>
         <span class="text">Dark Mode ON</span>
     </div>
-
     <!--Táblázat szekció-->
-
-    <table class="table table-bordered table-light table-hover table-sm text-center fw-normal mx-auto align-middle">
-        <thead class="fs-5">
-            <tr>
-                <th>Dolgozó vezetékneve</th>
-                <th>Dolgozó keresztneve</th>
-                <th>E-mail cím</th>
-                <th>Telefonszám</th>
-                <th>Beosztás</th>
-                <th>Aktív állomány</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Pérez</td>
-                <td>Juan</td>
-                <td>jperez@gmail.com</td>
-                <td>123-4567</td>
-                <td>Fullstack fejlesztő</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-            <tr>
-                <td>Janssen</td>
-                <td>Jan</td>
-                <td>jjans@ghotmail.com</td>
-                <td>999-9999</td>
-                <td>Projekt leader</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-            <tr>
-                <td>Nanigashi</td>
-                <td>Nanno</td>
-                <td>nanninanno@gmail.com</td>
-                <td>111-1111</td>
-                <td>Adatbázis tudós</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-            <tr>
-                <td>Bloggs</td>
-                <td>Joe</td>
-                <td>bloggsj@hotmail.com</td>
-                <td>444-5555</td>
-                <td>BackEnd fejlesztő</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-            <tr>
-                <td>Meier</td>
-                <td>Hans</td>
-                <td>meierh@gmail.com</td>
-                <td>343-4545</td>
-                <td>FrontEnd fejlesztő</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-            <tr>
-                <td>Gipsz</td>
-                <td>Jakab</td>
-                <td>gjakab@gmail.com</td>
-                <td>121-2121</td>
-                <td>SCRUM master</td>
-                <td><input type="checkbox" class="allapot"></td>
-            </tr>
-        </tbody>
-    </table>
-
+    <div class="table-responsive-sm">
+        <table class="table table-bordered table-light table-hover table-sm text-center fw-normal mx-auto align-middle">
+            <thead class="fs-5">
+                <tr>
+                    <th>Dolgozó vezetékneve</th>
+                    <th>Dolgozó keresztneve</th>
+                    <th>E-mail cím</th>
+                    <th>Telefonszám</th>
+                    <th>Beosztás</th>
+                    <th>Aktív állomány</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Pérez</td>
+                    <td>Juan</td>
+                    <td>jperez@gmail.com</td>
+                    <td>123-4567</td>
+                    <td>Fullstack fejlesztő</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+                <tr>
+                    <td>Janssen</td>
+                    <td>Jan</td>
+                    <td>jjans@ghotmail.com</td>
+                    <td>999-9999</td>
+                    <td>Projekt leader</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+                <tr>
+                    <td>Nanigashi</td>
+                    <td>Nanno</td>
+                    <td>nanninanno@gmail.com</td>
+                    <td>111-1111</td>
+                    <td>Adatbázis tudós</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+                <tr>
+                    <td>Bloggs</td>
+                    <td>Joe</td>
+                    <td>bloggsj@hotmail.com</td>
+                    <td>444-5555</td>
+                    <td>BackEnd fejlesztő</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+                <tr>
+                    <td>Meier</td>
+                    <td>Hans</td>
+                    <td>meierh@gmail.com</td>
+                    <td>343-4545</td>
+                    <td>FrontEnd fejlesztő</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+                <tr>
+                    <td>Gipsz</td>
+                    <td>Jakab</td>
+                    <td>gjakab@gmail.com</td>
+                    <td>121-2121</td>
+                    <td>SCRUM master</td>
+                    <td><input type="checkbox" class="allapot"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="container text-dark bg-light" id="kapcsoloTabla">
 
         <h3 class="text-center">Táblázat Funkció kapcsolók</h3>
@@ -111,13 +110,12 @@
         <br>
 
         <div class="col-12 text-center">
-            <button type="button" class="btn btn-success text-white" id="tesztSor">Tesztsor
+            <button type="button" class="btn btn-success text-white m-3" id="tesztSor">Tesztsor
                 Beillesztése</button>
-            <button type="button" class="btn btn-danger text-white" id="tesztSorKi">Tesztsor
+            <button type="button" class="btn btn-danger text-white m-3" id="tesztSorKi">Tesztsor
                 Törlése</button>
         </div>
 
-        <br>
         <p class="paragraf text-dark">* A táblázatban szereplő "Aktív állomány" elemek a kijelölést követően, megőrzik a
             korábban megadott
             értéket </p>
@@ -191,7 +189,6 @@
         </div>
 
     </div>
-
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/xxjapp/xdialog@3/xdialog.min.js"></script>
 </body>
