--- a/index.html
+++ b/index.html
@@ -406,13 +406,13 @@
                 </path>
             </svg>
         </div>
-        <footer class="text-light text-center" id="contact_hu">
+        <footer class="text-light text-center" id="contact">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
-                    <li class="icon p-3"><a href="#" rel="noreferrer"
-                            target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
-                                class="fab fa-github"></i></a></li>
+                                class="fab fa-linkedin"></i></a></li>
+                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                    </li>
                 </ul>
 
             </div>
@@ -435,9 +435,9 @@
                         <p>
                             Egy elkötelezett
                         <p class="animation mx-auto">Junior Frontend</p> fejlesztő aki
-                        lelkesedik a webfejlesztésért, és nyitott az új kihívásokra, nem utolsósorban pedig
+                        lelkesedik a webfejlesztésért, nyitott az új kihívásokra, nem utolsósorban pedig
                         hisz az élethosszig tartó tanulásban. Szívesen veszek részt felhasználóbarát és
-                        hatékony weboldalak készítésében. Amikor épp nem a kódolok,
+                        hatékony weboldalak készítésében. Amikor épp nem kódolok,
                         leginkább olvasok, aktívan mozgok, és túrázok mindenfelé a nagy világban.</p>
                     </div>
                 </div>
@@ -469,7 +469,7 @@
 
 
 
-        <div class="projects-section slide-in" id="projects_hu">
+        <div class="projects-section slide-in" id="projects">
             <h2>Projektek</h2>
             <div class="project-container">
                 <div class="image-container">
@@ -760,13 +760,13 @@
                 </path>
             </svg>
         </div>
-        <footer class="text-light text-center" id="contact_hu">
+        <footer class="text-light text-center" id="contact">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
-                    <li class="icon p-3"><a href="#" rel="noreferrer"
-                            target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
-                                class="fab fa-github"></i></a></li>
+                                class="fab fa-linkedin"></i></a></li>
+                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                    </li>
                 </ul>
 
             </div>
