navbar problem has solved

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link projects" href="#projects">Projects</a>
+                            <a class="nav-link projects section" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link resume" href="Projects/MYownResume/resume.html"
                                 target="_blank">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link contact" href="#contact">Contact</a>
+                            <a class="nav-link contact section" href="#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -469,7 +469,7 @@
 
 
 
-        <div class="projects-section slide-in" id="projects">
+        <div class="projects-section slide-in" id="projektek" data-lang="hu">
             <h2>Projektek</h2>
             <div class="project-container">
                 <div class="image-container">
@@ -760,7 +760,7 @@
                 </path>
             </svg>
         </div>
-        <footer class="text-light text-center" id="contact">
+        <footer class="text-light text-center" id="kapcsolat" data-lang="hu">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
                     <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
