--- a/Projects/MYownResume/resume.html
+++ b/Projects/MYownResume/resume.html
@@ -299,7 +299,7 @@
         const backGround = document.querySelector('#background');
         const scrollSpeed = 1;
 
-        container.addEventListener('scroll', () => {
+        function updateBackground() {
             const scrollPosition = container.scrollTop;
             backGround.style.backgroundPositionY = -scrollPosition * scrollSpeed + 'px';
 
@@ -308,7 +308,17 @@
             const overlayColor = `rgba(0, 0, 0, ${darkness})`;
             backGround.style.backgroundImage = `linear-gradient(${overlayColor}, ${overlayColor}), url('background.png')`;
             container.style.transform = `translateY(${scrollPosition}px)`;
-        });
+        }
+
+        function handleResize() {
+            if (window.innerWidth >= 375 && window.innerWidth <= 992) {
+                updateBackground();
+            } else {
+            }
+        }
+
+        window.addEventListener('load', handleResize);
+        window.addEventListener('resize', handleResize);
     </script>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
