Skills section edit

--- a/index.html
+++ b/index.html
@@ -456,7 +456,6 @@
 
 
 
-
         <div class="container divider">
             <div class="contactSection">
 
@@ -693,7 +692,7 @@
                 <div class="spacer">
                     <hr class="spacer-line">
                 </div>
-                <h2>Készségek</h2>
+                <h2>Ismert technológiák</h2>
                 <div id="skills">
                     <div class="row">
                         <div class="col-4 skill">
