--- a/Projects/MYownResume/resume.html
+++ b/Projects/MYownResume/resume.html
@@ -208,7 +208,7 @@
                                 </tr>
                                 <tr>
                                     <td> <i class="fas fa-envelope icon"></i></i> <span
-                                            class="data">cz.krisztian6@gmail.com</span></td>
+                                            class="data">krisztianczinege.info@gmail.com</span></td>
                                     <td> <i class="fas fa-mobile-alt icon"></i><span class="data">
                                             +36-30-947-45-18
                                         </span></td>
