--- a/Projects/MYownResume/resume.html
+++ b/Projects/MYownResume/resume.html
@@ -319,14 +319,20 @@
             container.style.transform = `translateY(${scrollPosition}px)`;
         }
 
+
+
         function handleResize() {
-            if (window.innerWidth >= 375 && window.innerWidth <= 992) {
+            if (window.innerWidth >= 375) {
                 updateBackground();
             } else {
+
             }
         }
 
-        window.addEventListener('load', handleResize);
+        window.addEventListener('load', () => {
+            handleResize();
+        });
+
         window.addEventListener('resize', handleResize);
     </script>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
