--- a/Projects/BerenyiSirko/index.html
+++ b/Projects/BerenyiSirko/index.html
@@ -111,79 +111,83 @@
       <div class="grid-item">
         <a href="images/Egyedi gránit síremlék.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Egyedi gránit síremlék.jpg" class="img-fluid"
-            alt="Egyedi gránit síremlék" data-caption="Egyedi gránit síremlék">
+            title="Egyedi gránit síremlék" alt="Egyedi gránit síremlék" data-caption="Egyedi gránit síremlék">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Antikolt kezi fafaragás.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Antikolt kezi fafaragás.jpg" class="img-fluid"
-            alt="Antikolt kézi fafaragás" data-caption="Antikolt kézi fafaragás">
+            title="Antikolt kézi fafaragás" alt="Antikolt kézi fafaragás" data-caption="Antikolt kézi fafaragás">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Faragott rózsás sírkő.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Faragott rózsás sírkő.jpg" class="img-fluid"
-            alt="Faragott rózsás sírkő" data-caption="Faragott rózsás sírkő">
+            title="Faragott rózsás sírkő" alt="Faragott rózsás sírkő" data-caption="Faragott rózsás sírkő">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Gránit egyedi paraszt kereszttel.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Gránit egyedi paraszt kereszttel.jpg" class="img-fluid"
-            alt="Gránit egyedi paraszt kereszttel" data-caption="Gránit egyedi paraszt kereszttel">
+            title="Gránit egyedi paraszt kereszttel" alt="Gránit egyedi paraszt kereszttel"
+            data-caption="Gránit egyedi paraszt kereszttel">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Kétszemélyes gránit síremlék.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Kétszemélyes gránit síremlék.jpg" class="img-fluid"
-            alt="Kétszemélyes gránit síremlék" data-caption="Kétszemélyes gránit síremlék">
+            title="Kétszemélyes gránit síremlék" alt="Kétszemélyes gránit síremlék"
+            data-caption="Kétszemélyes gránit síremlék">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Másfeles méretű gránit síremlék.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Másfeles méretű gránit síremlék.jpg" class="img-fluid"
-            alt="Másfeles méretű gránit síremlék" data-caption="Másfeles méretű gránit síremlék">
+            title="Másfeles méretű gránit síremlék" alt="Másfeles méretű gránit síremlék"
+            data-caption="Másfeles méretű gránit síremlék">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Egyedi egyszemélyes gránit sírkő.jpg" data-lightbox="gridImage">
           <img width="1920" height="1280" src="images/Egyedi egyszemélyes gránit sírkő.jpg" class="img-fluid"
-            alt="Egyedi egyszemélyes gránit sírkő" data-caption="Egyedi egyszemélyes gránit sírkő">
+            title="Egyedi egyszemélyes gránit sírkő" alt="Egyedi egyszemélyes gránit sírkő"
+            data-caption="Egyedi egyszemélyes gránit sírkő">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/EgyesGránit.jpg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/EgyesGránit.jpg" class="img-fluid" alt="Egyes Gránit kő"
-            data-caption="EgyesGránit">
+          <img width="1920" height="1280" src="images/EgyesGránit.jpg" class="img-fluid" title="Egyes Gránit kő"
+            alt="Egyes Gránit kő" data-caption="EgyesGránit">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Rózsás.jpg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/Rózsás.jpg" class="img-fluid" alt="Faragott mintás kő"
-            data-caption="Betűtípusok">
+          <img width="1920" height="1280" src="images/Rózsás.jpg" class="img-fluid" title="Faragott mintás kő"
+            alt="Faragott mintás kő" data-caption="Betűtípusok">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Kettes Gránitkő.jpg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/Kettes Gránitkő.jpg" class="img-fluid" alt="Kettes Gránit kő"
-            data-caption="Kettes Gránit kő">
+          <img width="1920" height="1280" src="images/Kettes Gránitkő.jpg" class="img-fluid" title="Kettes Gránit kő"
+            alt="Kettes Gránit kő" data-caption="Kettes Gránit kő">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Vörösgránit.jpg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/Vörösgránit.jpg" class="img-fluid" alt="Betűtípusok"
-            data-caption="Betűtípusok">
+          <img width="1920" height="1280" src="images/Vörösgránit.jpg" class="img-fluid" title="Betűtípusok"
+            alt="Betűtípusok" data-caption="Betűtípusok">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Utmenti Kereszt.jpg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/Utmenti Kereszt.jpg" class="img-fluid" alt="Utmenti Kereszt"
-            data-caption="Utmenti Kereszt">
+          <img width="1920" height="1280" src="images/Utmenti Kereszt.jpg" class="img-fluid" title="Utmenti Kereszt"
+            alt="Utmenti Kereszt" data-caption="Utmenti Kereszt">
         </a>
       </div>
       <div class="grid-item">
         <a href="images/Betűtípusok.jpeg" data-lightbox="gridImage">
-          <img width="1920" height="1280" src="images/Betűtípusok.jpeg" class="img-fluid" alt="Betűtípusok"
-            data-caption="Betűtípusok">
+          <img width="1920" height="1280" src="images/Betűtípusok.jpeg" class="img-fluid" title="Betűtípusok"
+            alt="Betűtípusok" data-caption="Betűtípusok">
         </a>
       </div>
     </div>
@@ -209,6 +213,10 @@
     </div>
   </div>
   </div>
+  <footer class="container container-fluid text-light text-center">
+    <p class="mt-3 fs-6 fw-bolder fst-italic">Az oldalt készítette: <a href="https://chirs9110.github.io/portfolio/"
+        target="_blank"> Czinege Krisztián </a> </p>
+  </footer>
 
 
   <!-- jQuery CDN Link -->
