--- a/index.html
+++ b/index.html
@@ -418,9 +418,10 @@
         <footer class="text-light text-center" id="contact">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
-                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
-                                class="fab fa-linkedin"></i></a></li>
-                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                    <li class="icon p-3"><a href="https://www.linkedin.com/in/krisztianczinege/" rel="noreferrer"
+                            target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li class="icon p-3"><a href="https://github.com/Chirs9110?tab=repositories" rel="noreferrer"
+                            target="_blank"><i class="fab fa-github"></i></a>
                     </li>
                 </ul>
 
@@ -771,9 +772,10 @@
         <footer class="text-light text-center" id="kapcsolat" data-lang="hu">
             <div class="container social-icons">
                 <ul class="d-flex flex-row justify-content-center align-items-stretch mt-3 p-1">
-                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i
-                                class="fab fa-linkedin"></i></a></li>
-                    <li class="icon p-3"><a href="#" rel="noreferrer" target="_blank"><i class="fab fa-github"></i></a>
+                    <li class="icon p-3"><a href="https://www.linkedin.com/in/krisztianczinege/" rel="noreferrer"
+                            target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                    <li class="icon p-3"><a href="https://github.com/Chirs9110?tab=repositories" rel="noreferrer"
+                            target="_blank"><i class="fab fa-github"></i></a>
                     </li>
                 </ul>
 
