--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                 <div class="sectionTwo flex-column flex-lg-row">
                     <button type="button" name="getInTouch" value="getInTouch">
-                        <a href="mailto:cz.krisztian6@gmail.com">Get in touch</a></button>
+                        <a href="mailto:krisztianczinege.info@gmail.com">Get in touch</a></button>
                 </div>
 
             </div>
@@ -468,7 +468,7 @@
 
                 <div class="sectionTwo flex-column flex-lg-row">
                     <button type="button" name="getInTouch" value="getInTouch">
-                        <a href="mailto:cz.krisztian6@gmail.com">Írj nekem e-mailt</a></button>
+                        <a href="mailto:krisztianczinege.info@gmail.com">Írj nekem e-mailt</a></button>
                 </div>
 
             </div>
