--- a/Projects/MYownResume/resume.html
+++ b/Projects/MYownResume/resume.html
@@ -234,7 +234,7 @@
                                 <p class="semi-bold">EDD Sergeant - Explosive Detection Dog Handler, Hungarian Defence
                                     Forces
                                 </p>
-                                <p> - Detect explosive materials by dog support and prevent the unauthorized
+                                <p style="font-size: 14px;"> - Detect explosive materials by dog support and prevent the unauthorized
                                     introduction
                                     of explosive devices or matter</p>
 
@@ -244,20 +244,15 @@
                             <div class="date">2018 - 2020</div>
                             <div class="info">
                                 <p class="semi-bold">Special Forces Communcations Sergeant, Hungarian Defence Forces</p>
-                                <p> - Establish and supervise the operation of high frequency
-                                    (HF) system</p>
-                                <p> - Maintain the software-defined radio systems with a specific configuration program
+                                <p style="font-size: 14px;"> - Operate software-defined radio systems with a custom configuration program in accordance with the rules of the Communication Security procedure.
                                 </p>
-                                <p> - Prepare for various operations in accordance with the rules of the Communication
-                                    Security
-                                    procedure</p>
                             </div>
                         </li>
                         <li>
-                            <div class="date">2020 - Present</div>
+                            <div class="date">2020 - 2023</div>
                             <div class="info">
                                 <p class="semi-bold">Ministry of Defence of Hungarian</p>
-                                <p> - Organize and coordinate internal communication system in cooperation with
+                                <p style="font-size: 14px;"> - Organize and coordinate internal communication system in cooperation with
                                     subordinate
                                     and partner organizations</p>
                             </div>
@@ -295,13 +290,20 @@
                             <div class="date">2022-</div>
                             <div class="info">
                                 <p class="semi-bold"> Front-end Developer Course, Ruander Oktatási Ltd, Budapest</p>
-                                <span> / Scrimba Frontend Carrier path course </span0>
+                                <span style="font-size: 14px;"> HTML5, CSS3, Bootstrap, JavaScript, TypeScript, Angular, NodeJs </span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="date">2023-</div>
+                            <div class="info">
+                                <p class="semi-bold"> Scrimba Frontend Carrier path course -  at personalized pace</p>
                             </div>
                         </li>
                         <li>
                             <div class="date">Present</div>
                             <div class="info">
                                 <p class="semi-bold"> WebDeveloper Course, Ruander Oktatási Ltd, Budapest</p>
+                                <span style="font-size: 14px;"> MySql, MsSql, Php </span>
                             </div>
                         </li>
                     </ul>
