--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
                             <div class="modal-content">
                                 <div class="modal-header bg-dark">
                                     <h5 class="modal-title mx-auto text-danger explaination">
-                                        Please answer this short question to help prevent spam.
+                                        <!-- Please answer this short question to help prevent spam. -->
                                    </h5>
                                 </div>
                                 <div class="modal-body bg-dark">
                                     <form id="emailFormModal">
                                         <div class="authentication_details text-light form-group">
-                                            <label for="m_captcha_answer_modal">Which sense do we use to hear: eye or
-                                                ear?</label>
+                                            <!-- <label for="m_captcha_answer_modal">Which sense do we use to hear: eye or
+                                                ear?</label> -->
                                             <input
                                                 class="form-control m-1 form-outline w-50 mx-auto m_captcha_answer_modal"
                                                 type="text" name="m_captcha_answer_modal"
@@ -514,14 +514,14 @@
                             <div class="modal-content">
                                 <div class="modal-header bg-dark">
                                     <h5 class="modal-title mx-auto text-danger explaination">
-                                        Kérlek, válaszolj erre a rövid kérdésre, hogy segíts megelőzni a spameket. 
+                                        <!-- Kérlek, válaszolj erre a rövid kérdésre, hogy segíts megelőzni a spameket.  -->
                                    </h5> 
                                 </div>
                                 <div class="modal-body bg-dark">
                                     <form id="emailFormModalHun">
                                         <div class="authentication_details text-light form-group">
-                                            <label for="m_captcha_answer_modal">Melyik érzékszervünk használatos a
-                                                halláshoz: szem, vagy fül?</label>
+                                            <!-- <label for="m_captcha_answer_modal">Melyik érzékszervünk használatos a
+                                                halláshoz: szem, vagy fül?</label> -->
                                             <input
                                                 class="form-control m-1 form-outline w-50 mx-auto m_captcha_answer_modal"
                                                 type="text" name="m_captcha_answer_modal"
